--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1246,10 +1246,88 @@ a {
 .cid-sK8o05k5dT .mbr-section-subtitle {
   color: #bbbbbb;
 }
-.cid-sMwxf6wAUk {
-  padding-top: 7rem;
-  padding-bottom: 5rem;
+.cid-tHRq1KMBRF {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #232323;
+}
+.cid-tHRq1KMBRF .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tHRq1KMBRF .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tHRq1KMBRF .card:not(:nth-last-child(1)) {
+  margin-bottom: 2rem;
+}
+.cid-tHRq1KMBRF .card-wrapper {
   background-color: #353535;
+  border-radius: 4px;
+}
+.cid-tHRq1KMBRF .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-tHRq1KMBRF .social-row .soc-item {
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin-right: 0.6rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  border: 2px solid #6592e6;
+  transition: all 0.3s;
+}
+.cid-tHRq1KMBRF .social-row .soc-item .mbr-iconfont {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  color: #6592e6;
+  font-size: 1.5rem;
+  transition: all 0.3s;
+}
+.cid-tHRq1KMBRF .social-row .soc-item:hover {
+  background-color: #6592e6;
+}
+.cid-tHRq1KMBRF .social-row .soc-item:hover .mbr-iconfont {
+  color: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-tHRq1KMBRF .card-box {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) {
+  .cid-tHRq1KMBRF .card-box {
+    padding-right: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-tHRq1KMBRF .card-box {
+    padding-left: 2rem;
+    padding-right: 4rem;
+  }
+}
+.cid-tHRq1KMBRF .card-title {
+  color: #fafafa;
+}
+.cid-tHRq1KMBRF .mbr-text,
+.cid-tHRq1KMBRF .social-row {
+  color: #fafafa;
+}
+.cid-tHRq1KMBRF .card-subtitle {
+  color: #fafafa;
+}
+.cid-sMwxf6wAUk {
+  padding-top: 0rem;
+  padding-bottom: 5rem;
+  background-color: #232323;
 }
 .cid-sMwxf6wAUk .mbr-section-title {
   color: #fafafa;
@@ -1260,7 +1338,7 @@ a {
 .cid-sJWZSNRJy7 {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #232323;
+  background-color: #353535;
 }
 .cid-sJWZSNRJy7 .list {
   list-style: none;
@@ -1706,7 +1784,7 @@ a {
 .cid-sJWZSNRJy7 {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #232323;
+  background-color: #353535;
 }
 .cid-sJWZSNRJy7 .list {
   list-style: none;
@@ -2103,7 +2181,7 @@ a {
 .cid-sJWZSNRJy7 {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #232323;
+  background-color: #353535;
 }
 .cid-sJWZSNRJy7 .list {
   list-style: none;
